Sayfalar eklendi, ses ekleme sayfası yapılıyor

--- a/VoiceCommandDatabase/mainpage/templates/mainpage/index.html
+++ b/VoiceCommandDatabase/mainpage/templates/mainpage/index.html
@@ -7,9 +7,9 @@ ANASAYFA
 {% block content %}
 <div class="d-flex flex-column justify-content-center align-items-center vh-100">
     <div class="d-flex justify-content-center w-100 mb-3">
-        <a href="/" class="btn btn-success btn-lg mx-3 w-25">Dosyalarımdan Ses Ekle</a>
-        <a href="/harcamalari_goruntule" class="btn btn-success btn-lg mx-3 w-25">Ses Kaydederek Ekle</a>
-        <a href="/urunleri_goruntule" class="btn btn-success btn-lg mx-3 w-25">Sesleri Görüntüle</a>
+        <a href="/ses_ekle" class="btn btn-success btn-lg mx-3 w-25">Dosyalarımdan Ses Ekle</a>
+        <a href="/ses_kaydet" class="btn btn-success btn-lg mx-3 w-25">Ses Kaydederek Ekle</a>
+        <a href="/sesleri_goruntule" class="btn btn-success btn-lg mx-3 w-25">Sesleri Görüntüle</a>
     </div>
     {% comment %} <div class="d-flex justify-content-center w-100">
         <a href="/islemleri_goruntule" class="btn btn-success btn-lg mx-3 w-50">Tamamlanmamış İşlemleri Görüntüle</a>
