--- a/VoiceCommandDatabase/mainpage/templates/mainpage/record_voice.html
+++ b/VoiceCommandDatabase/mainpage/templates/mainpage/record_voice.html
@@ -6,7 +6,7 @@ Ses Kaydet
 
 {% block content %}
 <div class="container">
-  <h1 class="title">Ses Kaydedici</h1>
+  <h1 class="title">VERİTABANINA YENİ BİR SES KAYDET VE EKLE</h1>
     <br />
     <div class="recorder">
         <button id="startRecord" class="button start">Kayda Başla</button>
