--- a/VoiceCommandDatabase/mainpage/templates/mainpage/add_voice.html
+++ b/VoiceCommandDatabase/mainpage/templates/mainpage/add_voice.html
@@ -10,32 +10,30 @@ Ses Ekle
     <form method="post" enctype="multipart/form-data" class="shadow-lg p-4 rounded bg-light">
         {% csrf_token %}
         <div class="form-group mb-3">
-            <label for="id_owner_name">Ad Soyad</label>
-            <input type="text" id="first_name" name="first_name" class="form-control" required 
+            <label for="id_owner_name">İsim</label>
+            <input type="text" id="owner_name" name="owner_name" class="form-control" required 
                 pattern="^[A-Za-zÇçĞğİıÖöŞşÜü\s]+$" title="İsim sadece harflerden oluşmalıdır." placeholder="İsim giriniz">
         </div>
+
+        <div class="form-group mb-3">
+            <label for="id_owner_surname">Soyisim</label>
+            <input type="text" id="owner_surname" name="owner_surname" class="form-control" required 
+                pattern="^[A-Za-zÇçĞğİıÖöŞşÜü\s]+$" title="Soyisim sadece harflerden oluşmalıdır." placeholder="Soyisim giriniz">
+        </div>
+
 
         <div class="form-group mb-3">
             <label for="id_owner_gender">Cinsiyet</label>
             <select id="owner_gender" name="owner_gender" class="form-control" required>
                 <option value="">Cinsiyet Seçiniz</option>
-                <option value="erkek">Erkek</option>
-                <option value="kadin">Kadın</option>
-            </select>
-        </div>
-
-        <div class="form-group mb-3">
-            <label for="id_language">Dil</label>
-            <select id="owner_gender" name="owner_gender" class="form-control" required>
-                <option value="">Dil Seçiniz</option>
-                <option value="turkce">Türkçe</option>
-                <option value="ingilizce">İngilizce</option>
+                <option value="male">Erkek</option>
+                <option value="female">Kadın</option>
             </select>
         </div>
 
         <div class="form-group mb-3">
             <label for="id_word">Seste Söylenen Kelime</label>
-            <select id="owner_gender" name="owner_gender" class="form-control" required>
+            <select id="word" name="word" class="form-control" required>
                 <option value="">Kelime Seçiniz</option>
                 <option value="isik">Işığı</option>
                 <option value="alarm">Alarmı</option>
