Account için Url'ler eklendi sayfalar oluşturuldu

--- a/VoiceCommandDatabase/templates/partials/navbar.html
+++ b/VoiceCommandDatabase/templates/partials/navbar.html
@@ -17,11 +17,11 @@
             <ul class="navbar-nav">
             {% if user.is_authenticated %}
                 <li class="nav-item">
-                    <a class="btn btn-danger btn-sm" href="/logout">Çıkış Yap</a>
+                    <a class="btn btn-danger btn-sm" href="{% url 'logout' %}">Çıkış Yap</a>
                 </li>
             {% else %}
                 <li class="nav-item">
-                    <a class="btn btn-danger btn-sm" href="/login">Giriş Yap</a>
+                    <a class="btn btn-danger btn-sm" href="{% url 'login' %}">Giriş Yap</a>
                 </li>
             {% endif %}
                 
