Ses ekleme kısmına dosya formatı doğrulaması eklendi

--- a/VoiceCommandDatabase/account/templates/account/login.html
+++ b/VoiceCommandDatabase/account/templates/account/login.html
@@ -28,4 +28,5 @@ Giriş yap
             <button type="submit"class="btn btn-primary">Giriş yap</button>
         </form>
     </div>
+</div>
 {% endblock content %}
