--- a/VoiceCommandDatabase/mainpage/templates/mainpage/add_voice.html
+++ b/VoiceCommandDatabase/mainpage/templates/mainpage/add_voice.html
@@ -5,6 +5,12 @@ Ses Ekle
 {% endblock title %}
 
 {% block content %}
+{% if error %}
+<div class="alert alert-danger alert-dismissible fade show" role="alert">
+    {{ error }}
+</div>
+{% endif %}
+
 <div class="container mt-5">
     <h2 class="text-center mb-4">Ses Dosyası Yükle</h2>
     <form method="post" enctype="multipart/form-data" class="shadow-lg p-4 rounded bg-light">
