--- a/VoiceCommandDatabase/mainpage/templates/mainpage/add_voice.html
+++ b/VoiceCommandDatabase/mainpage/templates/mainpage/add_voice.html
@@ -55,7 +55,7 @@ Ses Ekle
         </div>
 
         <div class="form-group mb-3">
-            <label for="id_file">Ses Dosyası</label>
+            <label for="id_file">Ses Dosyası (.mp3, .wav, .ogg)</label>
             {{ form.file }}
         </div>
         <button type="submit" class="btn btn-success btn-lg w-100">Yükle</button>
